syntax = "proto3";

package judge;

option go_package="./pb";

service Judge {
    rpc Compile(CompileReq) returns (CompileResp);
    rpc Exce(ExceReq) returns (ExceResp);
};

message FileError {
    string name = 1;    
	string type = 2;
	string message = 3;
}

message Result {
    string status = 1;            
	int64 exitStatus = 2;          
	string error = 3;       
	uint64 time = 4;                   
	uint64 memory = 5;                 
	uint64 runTime = 6;                
	map<string, string> files = 7;       
	map<string, string> fileIds = 8;    
	repeated FileError fileError = 9;       
}

message CompileReq {
	string code = 1;
	string language = 2;
}

message CompileResp {
    repeated Result result = 1;
}

message ExceReq {
    string fileId  = 1;
    string content = 2;
	string userInput = 3;
	string language = 4;
}

message ExceResp {
    repeated Result result = 1;
}